--- a/index.html
+++ b/index.html
@@ -20,22 +20,91 @@
 			</ul>
 			<div class="buscar">
 				<input type="text" name="pesquisar" class="pesquisar">
-				<button class="buscar">buscar</button>
+				<button class="buscar">Buscar</button>
 			</div>
 		</div>	
 	</header>
 
 <!-- container -->
 	<div class="container">
+
+		<!-- barra esquerda -->
+		<div class="barra-esquerda">
+			<h3 class="menu-barra-lateral">MENU</h3>
+
+			<ul class="lista-barra-lateral">
+				<a href=""><li>Item</li></a>
+				<a href=""><li>Item</li></a>
+				<a href=""><li>Item</li></a>
+				<a href=""><li>Item</li></a>
+				<a href=""><li>Item</li></a>
+				<a href=""><li>Item</li></a>
+				<a href=""><li>Item</li></a>
+				<a href=""><li>Item</li></a>
+				<a href=""><li>Item</li></a>
+				<a href=""><li>Item</li></a>
+				<a href=""><li>Item</li></a>
+				<a href=""><li>Item</li></a>
+				<a href=""><li>Item</li></a>
+				<a href=""><li>Item</li></a>
+				<a href=""><li>Item</li></a>
+				<a href=""><li>Item</li></a>
+				<a href=""><li>Item</li></a>
+				<a href=""><li>Item</li></a>
+				<a href=""><li>Item</li></a>
+				<a href=""><li>Item</li></a>
+				<a href=""><li>Item</li></a>
+				<a href=""><li>Item</li></a>
+				<a href=""><li>Item</li></a>
+				<a href=""><li>Item</li></a>
+			</ul>
+		</div>
 		
 		<!-- centro do container -->
 		<div class="centro">
-
-		</div>
-		
-		<!-- barra esquerda -->
-		<div class="barra-esquerda">
-			
+			<h3 class="titulo">TITULO</h3>
+			<p class="texto">	
+				Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus congue, 
+				nisl nec dapibus posuere, diam risus porttitor nunc, feugiat posuere erat 
+				lorem at tortor. Phasellus eget eleifend ligula. Proin laoreet mollis nisl 
+				nec vulputate. Integer fringilla at ex sed viverra. Praesent sodales nisi 
+				tellus, quis sagittis mi maximus non. Nulla eget tempus massa. Aenean leo 
+				leo, tincidunt a tincidunt quis, molestie vitae leo. Duis eget faucibus nibh. 
+				Suspendisse molestie vel nulla sed dapibus. Donec id maximus sapien, tincidunt 
+				mollis massa. Vivamus mollis justo in tellus interdum, nec elementum felis 
+				blandit. Morbi scelerisque iaculis metus vel viverra.
+				Fusce mollis et tortor at sollicitudin. Etiam finibus dolor eget efficitur 
+				semper. Suspendisse enim eros, ullamcorper et dui id, interdum gravida orci. 
+				Maecenas nec euismod libero. Quisque eget nisl neque. Etiam dictum vulputate 
+				elit, a aliquam lorem varius eu. Aenean scelerisque imperdiet nisl non faucibus. 
+				Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia 
+				Curae; Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere 
+				cubilia Curae;
+				Quisque sapien lacus, mollis tempus posuere eu, lobortis non tortor. Vestibulum 
+				ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia Curae; 
+				Fusce sagittis mattis libero quis vestibulum. Nam ultrices aliquet urna sit amet 
+				aliquam. Nullam vestibulum nibh nulla. Nullam ut efficitur leo. Nam a molestie 
+				velit. Vestibulum pellentesque, purus sed tincidunt luctus, urna ante scelerisque 
+				lorem, ac elementum ipsum tellus id ipsum. Nulla vitae sapien sit amet velit 
+				mattis ornare sit amet et orci. Donec ullamcorper sagittis urna a faucibus. 
+				Maecenas accumsan mollis dui, vitae tempus sapien tempus et. Aenean quis enim 
+				arcu.
+				Donec pellentesque feugiat nibh, placerat pretium quam gravida congue. Fusce 
+				auctor lectus in metus hendrerit maximus. Proin sagittis finibus feugiat. Nulla 
+				eget arcu dignissim, vestibulum justo eu, commodo orci. Nulla convallis massa ut 
+				augue porta, in tincidunt tellus blandit. Etiam nec justo quis magna efficitur 
+				blandit ac et turpis. Pellentesque lacus velit, luctus nec sollicitudin sed, 
+				lobortis ac tellus. Pellentesque in posuere ligula. Morbi euismod cursus turpis 
+				eu fringilla. Proin at dignissim eros, vel volutpat elit. Maecenas quis efficitur 
+				erat, interdum pretium quam. Aliquam aliquet rhoncus risus.
+				Quisque sagittis sodales velit, eget interdum nisi euismod vitae. Praesent 
+				venenatis nec erat non commodo. Nunc in porta metus, vitae euismod nulla. Sed 
+				ut ligula vel nunc venenatis tempor. Pellentesque lobortis purus sed arcu varius 
+				hendrerit. Sed rhoncus nunc odio, et rutrum elit varius vulputate. Fusce tincidunt 
+				condimentum dui, pellentesque gravida enim vehicula vel. Vestibulum iaculis ut 
+				lacus at eleifend. Fusce feugiat eget orci nec rutrum. Sed posuere sem in imperdiet 
+				faucibus.
+			</p>
 		</div>
 		
 	</div>
