--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<link rel="stylesheet" type="text/css" media="screen and (min-width: 601px)" href="./style/style.css">
+	<link rel="stylesheet" type="text/css" href="./style/style.css">
 	<link rel="stylesheet" type="text/css" media="screen and (max-width: 600px)" href="./style/stylemedia.css">
 
 	<title>@media CSS Responsive</title>
@@ -67,7 +67,7 @@
 			<div class="imagens">
 				<img src="./img/galeria/f1.jpeg" alt="">
 				<img src="./img/galeria/f2.jpg" alt="">
-				<img src="./img/galeria/f3.png" alt="">
+				
 			</div>
 			<p class="texto">	
 				Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus congue, 
